--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@ p.lead{
       </div>
     </div>
     <div class="col-right">
-      <h1>“happy birthday my pretty little kitty”</h1>
-      <p class="lead">راه يكبر الرقم الله يبارك لنشخ معا💜</p>
+      <h1>“happy birthday my pretty little kitty today you are officially 19years old congratulations🥳🎂”</h1>
+      <p class="lead">راه يكبر الرقم يا محاينك مادخلهاش في عيد ميلادك مي معليش لنشخ معا💜</p>
       <div id="love-counter">تحميل...</div>
       <button class="btn-neon" id="tapBtn" aria-haspopup="dialog" aria-controls="giftModal">
         <span class="glow"></span>عبزي هنا
@@ -287,3 +287,4 @@ drawStars();
 </script>
 </body>
 </html>
+
