--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ p.lead{
       </div>
     </div>
     <div class="col-right">
-      <h1>“happy birthday my pretty little kitty today you are officially 19years old congratulations🥳🎂”</h1>
+      <h1>“happy birthday my pretty little kitty today you are officially 19years old congratulations”</h1>
       <p class="lead">راه يكبر الرقم يا محاينك مادخلهاش في عيد ميلادك مي معليش لنشخ معا💜</p>
       <div id="love-counter">تحميل...</div>
       <button class="btn-neon" id="tapBtn" aria-haspopup="dialog" aria-controls="giftModal">
@@ -163,7 +163,7 @@ p.lead{
   <div class="modal" id="giftModal">
     <button class="close-btn" id="closeModal">✕</button>
     <h2>كلام من قلبي عينيا</h2>
-    <p>ياخو صوتك صوتك يبربرني ماعنداك راني نحرش سارة والله اني احبكي يافتاة هادي مجرد هدية بسيطة كنت حايب نتلاقاو لكن للأسف منقدرش درك يجي نهار ونعطيك هدية صح علاخاطر تستاهلي ياقلبي</p>
+    <p>   😓 ياخو صوتك صوتك يبربرني ماعنداك راني نحرش سارة والله اني احبكي يافتاة هادي مجرد هدية بسيطة كنت حايب نتلاقاو لكن للأسف منقدرش درك يجي نهار ونعطيك هدية صح علاخاطر تستاهلي ياقلبي اياياي كبرتي راكي قريب تولي مشي مراهقة </p>
     <p>كل عام ونتي بخير الزين تاعي وش راكي لابسة يالستوتة🥳🙄 </p>
     <button class="btn-neon" id="closeBtn2"><span class="glow"></span>إغلاق</button>
   </div>
@@ -287,4 +287,5 @@ drawStars();
 </script>
 </body>
 </html>
+
 
