Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ p.lead{
   <div class="modal" id="giftModal">
     <button class="close-btn" id="closeModal">✕</button>
     <h2>كلام من قلبي عينيا</h2>
-    <p>   😓 ياخو صوتك صوتك يبربرني ماعنداك راني نحرش سارة والله اني احبكي يافتاة هادي مجرد هدية بسيطة كنت حايب نتلاقاو لكن للأسف منقدرش درك يجي نهار ونعطيك هدية صح علاخاطر تستاهلي ياقلبي اياياي كبرتي راكي قريب تولي مشي مراهقة </p>
+    <p>    ياخو صوتك صوتك يبربرني ماعنداك راني نحرش سارة والله اني احبكي يافتاة هادي مجرد هدية بسيطة كنت حايب نتلاقاو لكن للأسف منقدرش درك يجي نهار ونعطيك هدية صح علاخاطر تستاهلي ياقلبي اياياي كبرتي راكي قريب تولي مشي مراهقة 😓 </p>
     <p>كل عام ونتي بخير الزين تاعي وش راكي لابسة يالستوتة🥳🙄 </p>
     <button class="btn-neon" id="closeBtn2"><span class="glow"></span>إغلاق</button>
   </div>
@@ -287,5 +287,6 @@ drawStars();
 </script>
 </body>
 </html>
+
 
 
